--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,21 @@
 
 buildscript {
     ext.kotlin_version = '1.6.21'
+    ext.nav_version = '2.3.1'
+
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+
 }
 
 plugins {
@@ -28,4 +43,5 @@ ext {
     junitVersion = '4.13.2'
     espressoVersion = '3.4.0'
     androidxJunitVersion = '1.1.3'
+
 }
